<resources>
    <string name="app_name" translatable="false">Practicum-Android-Diploma</string>
    <string name="main_screen_title">Main</string>
    <string name="favorite_screen_title">Favorites</string>
    <string name="team_screen_title">Team</string>
    <string name="vacancy_search_title">Search vacancies</string>
    <string name="search_hint">Enter request</string>
    <string name="no_connection">No internet</string>
    <string name="no_vacancy_list">Failed to get\n list of vacancies</string>
    <string name="filter_settings_title">Filtering settings</string>
    <string name="work_place">Place of work</string>
    <string name="industry">Industry</string>
    <string name="salary_expectation">Expected Salary</string>
    <string name="enter_amount">Enter amount</string>
    <string name="show_only_with_salary">Do not show without salary</string>
    <string name="choose_place_of_work">Choose place to work</string>
    <string name="country">Country</string>
    <string name="region">Region</string>
    <string name="choose_country">Choose country</string>
    <string name="choosing_region">Choose region</string>
    <string name="enter_region">Enter region</string>
    <string name="no_region">There is no such region</string>
    <string name="failed_to_get_list">Failed to get list</string>
    <string name="choose">Choose</string>
    <string name="apply">Apply</string>
    <string name="cancel">Reset</string>
    <string name="industry_header">Choose industry</string>
    <string name="industry_edit_text_hint">Enter industry</string>
    <string name="vacancy_toolbar">Vacancy</string>
    <string name="experience_title">Required Experience</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="no_salary_info">Salary not specified</string>
    <string name="vacancy_description_title">Vacancy Description</string>
    <string name="duties">Responsibilities</string>
    <string name="demands">Requirements</string>
    <string name="conditions">Conditions</string>
    <string name="core_skills_title">Key skills</string>
    <string name="contacts_title">Contacts</string>
    <string name="contact_person">Contact person</string>
    <string name="email_title">E-mail</string>
    <string name="phone_title">Telephone</string>
    <string name="no_information">No Information</string>
    <string name="comment_title">Telephone</string>

    <string name="vacancy_not_found_or_deleted">Job vacancy not found or\n deleted</string>
    <string name="server_error">Server error</string>
    <string name="favorite_list_empty">The list is empty</string>
    <string name="there_no_such_vacancies">There are no such vacancies</string>
    <string name="next_page_server_error">An error has occurred</string>
    <string name="next_page_internet_error">Check your internet connection</string>

    <string name="title_team">We were working on the application</string>
    <string name="name1" translatable="false">Гасымов Элчин Эмильевич</string>
    <string name="name2" translatable="false">Королев Егор Алексеевич</string>
    <string name="name3" translatable="false">Молоданов Виталий Олегович</string>
    <string name="name4" translatable="false">Шокин Андрей Александрович</string>
    <string name="name5" translatable="false">Рябицкий Андрей Игоревич</string>

    <plurals name="vacancy_quantity">
        <item quantity="zero">%d vacancies found</item>
        <item quantity="one">%d vacancy found</item>
        <item quantity="few">%d vacancies found</item>
        <item quantity="many">%d vacancies found</item>
        <item quantity="other">%d vacancies found</item>
    </plurals>

    <string name="share_vacancy">Interesting vacancy \"%1$s\" %2$s</string>
    <string name="separator" translatable="false">, </string>
    <string name="enter_sum">Enter sum</string>

    <string name="industry_no_industry" translatable="false">Такой отрасли нет</string>


</resources>
