<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/select_region_toolbar"
        style="@style/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height_64dp"
        app:buttonGravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_16px"
        app:title="@string/choosing_region" />

    <FrameLayout
        android:id="@+id/search_edit_frame"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_region_toolbar">

        <EditText
            android:id="@+id/region_search_query"
            style="@style/search_edittext_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_56dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_size_16"
            android:background="@drawable/shape_search_edit_text"
            android:hint="@string/enter_region"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/dimen_16dp"
            android:paddingTop="@dimen/dimen_4dp"
            android:paddingEnd="@dimen/dimen_8dp"
            android:paddingBottom="@dimen/dimen_4dp"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/ic_edit_text_cursor" />

        <ImageView
            android:id="@+id/search_icon_loupe"
            android:layout_width="@dimen/icon_width_48dp"
            android:layout_height="@dimen/icon_height_48dp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:scaleType="center"
            android:src="@drawable/ic_search_18px"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/clear_cross_ic"
            android:layout_width="@dimen/icon_width_48dp"
            android:layout_height="@dimen/icon_height_48dp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:scaleType="center"
            android:src="@drawable/ic_close_cross_14px"
            android:visibility="gone"
            tools:visibility="gone" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/region_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_8"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/search_edit_frame"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_edit_frame" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/no_list_placeholder_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="no_list_placeholder,no_list_placeholder_text"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/no_list_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/no_such_list_found"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_list_placeholder_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/failed_to_get_list"
        android:textAppearance="@style/text_22_display_medium_500"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_list_placeholder" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/no_region_placeholder_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="no_region_placeholder,no_region_placeholder_text"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/no_region_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/no_vacancy_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_region_placeholder_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_region"
        android:textAppearance="@style/text_22_display_medium_500"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_region_placeholder" />

    <ImageView
        android:id="@+id/no_connection_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:src="@drawable/no_connection_sceleton_head"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/no_connection_text"
        style="@style/text_22_display_medium_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_connection"
        android:textColor="?attr/colorOnPrimary"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_connection_placeholder"
        tools:text="Нет интернета" />

    <ImageView
        android:id="@+id/server_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:src="@drawable/server_error_placeholder_search"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/server_error_text"
        style="@style/text_22_display_medium_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/server_error"
        android:textColor="?attr/colorOnPrimary"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/server_error" />

</androidx.constraintlayout.widget.ConstraintLayout>
