<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.fragments.FavouritesFragment">

    <TextView
        android:id="@+id/favouritesFragmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:fontFamily="@font/ys_display_medium"
        android:paddingVertical="@dimen/dimen_20dp"
        android:text="@string/favorite_screen_title"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text_size_22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rwVacancy"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favouritesFragmentTitle" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/widgetNothing"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="placeHolderNothing,textPlaceHolderNothing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favouritesFragmentTitle" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/widgetWrong"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="placeHolderError,textPlaceHolderError"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favouritesFragmentTitle" />

    <ImageView
        android:id="@+id/placeHolderError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/no_vacancy_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favouritesFragmentTitle" />

    <TextView
        android:id="@+id/textPlaceHolderError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_16"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/no_vacancy_list"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text_size_22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeHolderError" />

    <ImageView
        android:id="@+id/placeHolderNothing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/favorite_list_empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favouritesFragmentTitle" />

    <TextView
        android:id="@+id/textPlaceHolderNothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_16"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/favorite_list_empty"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text_size_22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeHolderNothing" />

</androidx.constraintlayout.widget.ConstraintLayout>

